Solve home page's more button gap

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -38,7 +38,7 @@ main {
   .card-container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 
     h2 {
       color: var(--color-gray-text);
